--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
-<title>Final Project</title>
+<head>
+    <link rel="stylesheet" href="style.css" />
+    <title>Final Project</title>
+</head>
 <main></main>
 <script src="/bundle.js"></script>
