--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width" />
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
     <title>Collect</title>
 </head>
 <main></main>
